appointment-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: spe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: akdev6298/appointment-service:latest
          ports:
            - containerPort: 6002
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: spe
spec:
  selector:
    app: appointment-service
  ports:
    - port: 6002
      targetPort: 6002
  type: ClusterIP
