auth-microservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-microservice
  namespace: spe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-microservice
  template:
    metadata:
      labels:
        app: auth-microservice
    spec:
      containers:
        - name: auth
          image: akdev6298/authenticationandauthorizationmicroservice:0.0.4
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-microservice
  namespace: spe
spec:
  selector:
    app: auth-microservice
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
