frontend-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx-deployment
  labels:
    app: frontend-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-nginx
  template:
    metadata:
      labels:
        app: frontend-nginx
    spec:
      containers:
        - name: frontend-nginx
          image: akdev6298/frontend-nginx:v9
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-deployment
spec:
  type: NodePort 
  selector:
    app: frontend-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
