gateway-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: spe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway
          image: akdev6298/gateway-service:latest
          ports:
            - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: spe
spec:
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 8765
  type: ClusterIP
