user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: spe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: akdev6298/user-service:0.0.3
          ports:
            - containerPort: 6001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: spe
spec:
  selector:
    app: user-service
  ports:
    - port: 6001
      targetPort: 6001
  type: ClusterIP
