websocket-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
  namespace: spe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
        - name: websocket
          image: akdev6298/websocket:latest
          ports:
            - containerPort: 7000

---
apiVersion: v1 
kind: Service
metadata:
  name: websocket-service
  namespace: spe
spec:
  type: NodePort
  selector:
    app: websocket
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      nodePort: 30700
